# bioshop

./: .dockerignore  .dockstore.yml  .gitignore  Dockerfile  README.md  newt.py  pyproject.toml  requirements.txt  setup.cfg
bioshop/: version.py
bioshop/ann/: classify.py  fingerprint.py  flank.py  iters.py  melt.py
bioshop/cmds/: call.py  etl.py  fit.py  newt.py
bioshop/io/: assembly.py  intervals.py  monitor.py
bioshop/rep/: assembly.py  cigar.py  reference.py  region.py  vcf.py
bishop/: pyproject.toml
bishop/bishop/: canon.py  consts.py  train.py
bishop/bishop/ann/: __init__.py  canon.py  classify.py  fingerprint.py  flank.py  iters.py  precis.py
bishop/bishop/cmds/: call.py  etl.py  fit.py  train.py
bishop/bishop/io/: __init__.py  assembly.py  entrez.py  intervals.py  monitor.py
bishop/bishop/rep/: __init__.py  alignment.py  assembly.py  fingerprint.py  genome.py  region.py  vcf.py
bishop/bishop/task/: fingerprint.py
bishop/bishop/utils/: utils.py
bishop/tests/: test_region.py
src/: ann.py  base.py  cbuf.py  data.py  etl.py  metrics.py  model.py  models.py  predict.py  train.py  utils.py  worker.py
src/work/: __init__.py  cbuf.py  factory.py  gather.py  model.py  scatter.py  vector.py  worker.py
tests/: test_region.py
wdl/: bioshop_call.wdl  bioshop_etl.wdl  bioshop_etl_config.json  bioshop_etl_inputs.json
wdl/iforest/: JointVcfFiltering.wdl  JointVcfFiltering_formatted.wdl  JointVcfFiltering_input.wdl  format_wdl.py  inputs.json  push-wdl.sh  python-script.py
